@@ -1,5 +1,11 @@
 This is a summary of the changes in KTIGCC since the first alpha release:
 
+KTIGCC 1.01 (2006-08-21):
+
+* Find and Replace dialogs now remember history (but only for the current KTIGCC
+  session).
+
+
 KTIGCC 1.00 (2006-08-20):
 
 * Added NEWS file containing the history information previously published in the
